# secretagent

./: .gitignore  CHANGES.md  Makefile  TODO.md  example_params4simulate.md  pyproject.toml
benchmarks/: HOWTO.md
benchmarks/medcalc/: .gitignore
benchmarks/medcalc/prompt_templates/: baseline.txt
benchmarks/musr/: expt.py  ptools_common.py  ptools_murder.py  ptools_object.py  ptools_team.py
benchmarks/musr/conf/: murder.yaml  murder_baseline_qwen.yaml  murder_best_of_n.yaml  murder_orchestrated.yaml  murder_ptoolv2.yaml  murder_react.yaml  murder_react_budget.yaml  (+8 more)
benchmarks/natural_plan/: error_analysis_run_20260318_082239.md  report.md  report_run_20260318_004100.md  report_run_20260318_082239.md
benchmarks/rulearena/: Makefile  expt.py  ptools.py
benchmarks/sports_understanding/: Makefile  expt.py  ptools.py
benchmarks/true_detective/: Makefile  expt.py  ptools.py
examples/: orchestrate_comparison.py
experiments/induction/: analyze_patterns.py  data_split.py  find_patterns.py  iterate.py  iterate_v2.py  iterate_v3.py  iterate_v4.py  iterate_v5.py  iterate_v6.py  iterate_v6_airline.py  iterate_v6_airline_v2.py  iterate_v6_calendar.py  iterate_v6_object.py  iterate_v6_team.py  iterate_v6_team_split.py  iterate_v7.py  research_plan.md  results.tsv  run_induction.py  run_react.py
src/secretagent/: core.py  evaluate.py  implement_core.py  implement_pydantic.py  implement_react.py  implement_selfdiscover.py  llm_util.py
tests/: conftest.py  test_core.py  test_learn_utils.py  test_pot.py  test_pydantic_impl.py  test_quickstart.py  test_rulearena.py
(+576 files in other folders)
